--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.6.1",
 	"appid": "wx23096cc687c20adb",
-	"projectname": "%E9%93%BE%E5%86%9C%E6%9C%80%E6%96%B0",
+	"projectname": "%E9%93%BE%E5%86%9C",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
