--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
   ],
 "window": {
   "backgroundTextStyle": "dark",
-  "navigationBarBackgroundColor": "#ef696c",
+  "navigationBarBackgroundColor": "#44960E",
   "navigationBarTitleText": "WeChat",
   "navigationBarTextStyle": "white"
 },
