--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
     "pages/order/order",
     "pages/trip/trip",
       "pages/huifu/huifu",
-      "pages/tuikuan/tuikuan"
+      "pages/tuikuan/tuikuan",
+        "pages/sonhuifu/sonhuifu"
   ],
   "permission": {
     "scope.userLocation": {
