--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
   },
   "window": {
     "backgroundTextStyle": "dark",
-    "navigationBarBackgroundColor": "#44960E",
+    "navigationBarBackgroundColor": "#32CD32",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "white"
   },
