--- a/app.json
+++ b/app.json
@@ -42,7 +42,7 @@
   },
   "tabBar": {
     "color": "#CECECE",
-    "selectedColor": "#E9524A",
+    "selectedColor": "#32CD32",
     "list": [
       {
         "selectedIconPath": "images/首页2.png",
