--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 9,
+			"current": 10,
 			"list": [
 				{
 					"id": -1,
@@ -106,6 +106,13 @@
 					"id": -1,
 					"name": "提现",
 					"pathName": "pages/user/Money/tixian/tixian",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "店铺详情",
+					"pathName": "pages/user/Store/StoreDetail/StoreDetail",
 					"scene": null
 				}
 			]
